--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-
+Salawu Saheed <saheedsalawu121@gmail.com>
 Wondmagegn Abriham Chosha <wabaham9@gmail.com>
